--- a/data_view_processing.ipynb
+++ b/data_view_processing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 317,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,6 +14,7 @@
     "from scipy import signal \n",
     "from sklearn.preprocessing import LabelEncoder\n",
     "from sklearn.preprocessing import OneHotEncoder\n",
+    "from sklearn.model_selection import train_test_split\n",
     "import matplotlib.pyplot as plt \n",
     "%matplotlib inline "
    ]
@@ -225,18 +226,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 313,
    "metadata": {},
    "outputs": [],
    "source": [
     "from keras.layers import Input,Convolution2D,MaxPooling2D,Dense,BatchNormalization,Flatten,Dropout\n",
     "from keras.models import Model\n",
-    "from keras import activations,optimizers,activations,losses"
+    "from keras import activations,optimizers,activations,losses,metrics"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 300,
+   "execution_count": 314,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -283,12 +284,12 @@
     "\n",
     "loss_model=losses.categorical_crossentropy\n",
     "\n",
-    "model.compile(optimizer=opti_Model,loss=loss_model)"
+    "model.compile(optimizer=opti_Model,loss=loss_model,metrics=[metrics.categorical_accuracy])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 301,
+   "execution_count": 315,
    "metadata": {},
    "outputs": [
     {
@@ -298,29 +299,29 @@
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
-      "input_17 (InputLayer)        (None, 129, 71, 1)        0         \n",
+      "input_18 (InputLayer)        (None, 129, 71, 1)        0         \n",
       "_________________________________________________________________\n",
-      "batch_normalization_16 (Batc (None, 129, 71, 1)        4         \n",
+      "batch_normalization_17 (Batc (None, 129, 71, 1)        4         \n",
       "_________________________________________________________________\n",
-      "conv2d_28 (Conv2D)           (None, 129, 71, 16)       80        \n",
+      "conv2d_30 (Conv2D)           (None, 129, 71, 16)       80        \n",
       "_________________________________________________________________\n",
-      "max_pooling2d_25 (MaxPooling (None, 129, 71, 16)       0         \n",
+      "max_pooling2d_27 (MaxPooling (None, 129, 71, 16)       0         \n",
       "_________________________________________________________________\n",
-      "dropout_25 (Dropout)         (None, 129, 71, 16)       0         \n",
+      "dropout_27 (Dropout)         (None, 129, 71, 16)       0         \n",
       "_________________________________________________________________\n",
-      "conv2d_29 (Conv2D)           (None, 129, 71, 16)       1040      \n",
+      "conv2d_31 (Conv2D)           (None, 129, 71, 16)       1040      \n",
       "_________________________________________________________________\n",
-      "max_pooling2d_26 (MaxPooling (None, 129, 71, 16)       0         \n",
+      "max_pooling2d_28 (MaxPooling (None, 129, 71, 16)       0         \n",
       "_________________________________________________________________\n",
-      "dropout_26 (Dropout)         (None, 129, 71, 16)       0         \n",
+      "dropout_28 (Dropout)         (None, 129, 71, 16)       0         \n",
       "_________________________________________________________________\n",
-      "flatten_12 (Flatten)         (None, 146544)            0         \n",
+      "flatten_13 (Flatten)         (None, 146544)            0         \n",
       "_________________________________________________________________\n",
-      "dense_32 (Dense)             (None, 64)                9378880   \n",
+      "dense_35 (Dense)             (None, 64)                9378880   \n",
       "_________________________________________________________________\n",
-      "dense_33 (Dense)             (None, 32)                2080      \n",
+      "dense_36 (Dense)             (None, 32)                2080      \n",
       "_________________________________________________________________\n",
-      "dense_34 (Dense)             (None, 30)                990       \n",
+      "dense_37 (Dense)             (None, 30)                990       \n",
       "=================================================================\n",
       "Total params: 9,383,074\n",
       "Trainable params: 9,383,072\n",
@@ -335,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 304,
+   "execution_count": 326,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -352,47 +353,86 @@
     "Oh=OneHotEncoder()\n",
     "train_y=train_y.reshape(len(train_y),1)\n",
     "Oh.fit(train_y)\n",
-    "train_y=Oh.transform(train_y)\n",
+    "train_y_all=Oh.transform(train_y)\n",
     "\n",
-    "train_x=np.array(train_x).reshape(30000, 129, 71,1)"
+    "train_x_all=np.array(train_x).reshape(30000, 129, 71,1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 335,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_x,test_x,train_y,test_y=train_test_split(train_x_all,train_y_all,test_size=0.1,random_state=100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 337,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/1\n",
-      "14300/30000 [=============>................] - ETA: 335s - loss: 3.1587"
+      "Train on 24300 samples, validate on 2700 samples\n",
+      "Epoch 1/10\n",
+      "24300/24300 [==============================] - 540s - loss: 1.7272 - categorical_accuracy: 0.8657 - val_loss: 1.5854 - val_categorical_accuracy: 0.8870\n",
+      "Epoch 2/10\n",
+      "24300/24300 [==============================] - 523s - loss: 1.7257 - categorical_accuracy: 0.8650 - val_loss: 1.6078 - val_categorical_accuracy: 0.8852\n",
+      "Epoch 3/10\n",
+      "24300/24300 [==============================] - 543s - loss: 1.7194 - categorical_accuracy: 0.8687 - val_loss: 1.6353 - val_categorical_accuracy: 0.8685\n",
+      "Epoch 4/10\n",
+      "24300/24300 [==============================] - 555s - loss: 1.7123 - categorical_accuracy: 0.8665 - val_loss: 1.5901 - val_categorical_accuracy: 0.8607\n",
+      "Epoch 5/10\n",
+      "24300/24300 [==============================] - 535s - loss: 1.5083 - categorical_accuracy: 0.8449 - val_loss: 1.3493 - val_categorical_accuracy: 0.8548\n",
+      "Epoch 6/10\n",
+      "24300/24300 [==============================] - 518s - loss: 1.1707 - categorical_accuracy: 0.8565 - val_loss: 0.7660 - val_categorical_accuracy: 0.8581\n",
+      "Epoch 7/10\n",
+      "24300/24300 [==============================] - 523s - loss: 0.5288 - categorical_accuracy: 0.8893 - val_loss: 0.5283 - val_categorical_accuracy: 0.8904\n",
+      "Epoch 8/10\n",
+      "24300/24300 [==============================] - 520s - loss: 0.3358 - categorical_accuracy: 0.9163 - val_loss: 0.4470 - val_categorical_accuracy: 0.8930\n",
+      "Epoch 9/10\n",
+      "24300/24300 [==============================] - 518s - loss: 0.2667 - categorical_accuracy: 0.9305 - val_loss: 0.4838 - val_categorical_accuracy: 0.8889\n",
+      "Epoch 10/10\n",
+      "24300/24300 [==============================] - 516s - loss: 0.2209 - categorical_accuracy: 0.9410 - val_loss: 0.4506 - val_categorical_accuracy: 0.9026\n"
      ]
-    }
-   ],
-   "source": [
-    "model.fit(train_x,train_y.todense(),batch_size=100,epochs=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 306,
-   "metadata": {},
-   "outputs": [
+    },
     {
      "data": {
       "text/plain": [
-       "(30000, 129, 71, 1)"
+       "<keras.callbacks.History at 0x25b394e02e8>"
       ]
      },
-     "execution_count": 306,
+     "execution_count": 337,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "train_x.shape"
+    "model.fit(train_x,train_y.todense(),batch_size=100,epochs=10,validation_split=0.1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 334,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'list' object has no attribute 'shape'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-334-fc5433719861>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mtrain_x\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m: 'list' object has no attribute 'shape'"
+     ]
+    }
+   ],
+   "source": [
+    "train_x.shape()"
    ]
   },
   {
